fix: home spacing and position fixed

--- a/src/pages/HomePage/Home/Home.scss
+++ b/src/pages/HomePage/Home/Home.scss
@@ -1,4 +1,5 @@
 .home-section {
+  position: relative;
   height: 100vh;
   background-image: url('../../../assets/pages/Home/background.svg');
   background-position: center;
@@ -12,9 +13,10 @@
 
 .title-container {
   position: absolute;
+  width: fit-content;
   left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
+  top: 35%;
+  transform: translate(-50%, -35%);
 }
 
 .cv-button-container {
@@ -25,4 +27,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media only screen and (max-width: 768px) {
+  .title-container {
+    top: 45%;
+    transform: translate(-50%, -45%);
+  }
 }
